Fixed sizing issues when on small screes

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -179,13 +179,16 @@ article{
 main{
     position:relative;
 }
-.wrap {
-    position: absolute;
-    min-width: 100%;
-    min-height: 100%;
-    background-size: 100% 100%;
-    background: url('/immutable/images/friends1.jpg') no-repeat fixed right bottom;
-    margin: -20px -20px -20px -20px;
+@media (min-width: 650px) {
+
+    .wrap {
+        position: absolute;
+        min-width: 100%;
+        min-height: 100%;
+        background-size: 100% 100%;
+        background: url('/immutable/images/friends1.jpg') no-repeat fixed right bottom;
+        margin: -20px -20px -20px -20px;
+    }
 }
 .featureimg{
     position: relative;
